uart_more_fixes

--- a/Relatorio_2/Trabalho/SunTrack/Atmega128/Debug/Makefile
+++ b/Relatorio_2/Trabalho/SunTrack/Atmega128/Debug/Makefile
@@ -40,12 +40,12 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../Libraria/74hc595.c \
 ../Libraria/atmega128analog.c \
+../Libraria/atmega128i2c.c \
 ../Libraria/atmega128timer.c \
 ../Libraria/atmega128uart.c \
 ../Libraria/clock.c \
 ../Libraria/eeprom.c \
 ../Libraria/function.c \
-../Libraria/i2c.c \
 ../Libraria/keypad.c \
 ../Libraria/lcd.c \
 ../Libraria/lfsm.c \
@@ -64,12 +64,12 @@ ASM_SRCS +=
 OBJS +=  \
 Libraria/74hc595.o \
 Libraria/atmega128analog.o \
+Libraria/atmega128i2c.o \
 Libraria/atmega128timer.o \
 Libraria/atmega128uart.o \
 Libraria/clock.o \
 Libraria/eeprom.o \
 Libraria/function.o \
-Libraria/i2c.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
@@ -81,12 +81,12 @@ main.o
 OBJS_AS_ARGS +=  \
 Libraria/74hc595.o \
 Libraria/atmega128analog.o \
+Libraria/atmega128i2c.o \
 Libraria/atmega128timer.o \
 Libraria/atmega128uart.o \
 Libraria/clock.o \
 Libraria/eeprom.o \
 Libraria/function.o \
-Libraria/i2c.o \
 Libraria/keypad.o \
 Libraria/lcd.o \
 Libraria/lfsm.o \
@@ -98,12 +98,12 @@ main.o
 C_DEPS +=  \
 Libraria/74hc595.d \
 Libraria/atmega128analog.d \
+Libraria/atmega128i2c.d \
 Libraria/atmega128timer.d \
 Libraria/atmega128uart.d \
 Libraria/clock.d \
 Libraria/eeprom.d \
 Libraria/function.d \
-Libraria/i2c.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
@@ -115,12 +115,12 @@ main.d
 C_DEPS_AS_ARGS +=  \
 Libraria/74hc595.d \
 Libraria/atmega128analog.d \
+Libraria/atmega128i2c.d \
 Libraria/atmega128timer.d \
 Libraria/atmega128uart.d \
 Libraria/clock.d \
 Libraria/eeprom.d \
 Libraria/function.d \
-Libraria/i2c.d \
 Libraria/keypad.d \
 Libraria/lcd.d \
 Libraria/lfsm.d \
@@ -157,6 +157,13 @@ Libraria/atmega128analog.o: ../Libraria/atmega128analog.c
 	@echo Finished building: $<
 	
 
+Libraria/atmega128i2c.o: ../Libraria/atmega128i2c.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 Libraria/atmega128timer.o: ../Libraria/atmega128timer.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -186,13 +193,6 @@ Libraria/eeprom.o: ../Libraria/eeprom.c
 	
 
 Libraria/function.o: ../Libraria/function.c
-	@echo Building file: $<
-	@echo Invoking: AVR/GNU C Compiler : 5.4.0
-	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
-	@echo Finished building: $<
-	
-
-Libraria/i2c.o: ../Libraria/i2c.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include" -I"../Libraria"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -mrelax -g2 -Wall -mmcu=atmega128 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega128" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
